<resources>
    <string name="app_name">Takecarepets</string>
    <string name="version">Versión 1.2</string>
    <string name="acercade">Acerca de</string>
    <string name="logo">Logo</string>
    <string name="nav_header_title">Takecarepets</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="menu_home">Inicio</string>
    <string name="menu_nuevo">Nuevo</string>
    <string name="menu_lista">Lista</string>
    <string name="menu_desccripcion">Descripción</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_location">Nuevo avistamiento</string>
    <string name="title_adoption">Formulario de adopción</string>
    <string name="soltero">Soltero/a</string>
    <string name="casado">Casado/a</string>
    <string name="divorciado">Divorciado/a</string>
    <string name="viudo">Viudo/a</string>
    <string name="primaria">Primaria</string>
    <string name="secundaria">Secundaria</string>
    <string name="grado">Universidad</string>
    <string name="postgrado">Maestría</string>
    <string name="telefono">Teléfono</string>
    <string name="instruccion">Instrucción</string>
    <string name="edad">Edad</string>
    <string name="Inmueble">Tipo de Inmueble</string>
    <string name="casa">Casa</string>
    <string name="departamento">Departamento</string>
    <string name="campo">De campo</string>
    <string name="propio">Propio</string>
    <string name="arrendado">Arrendado</string>
    <string name="servicio">Por servicios</string>
    <string name="adecuada">Mascota más adecuada para ud</string>
    <string name="macho">Macho</string>
    <string name="hembra">Hembra</string>
    <string name="adulto">Adulto</string>
    <string name="cachorro">Cachorro</string>
    <string name="grande">Grande</string>
    <string name="mediano">Mediano</string>
    <string name="pequeno">Pequeño</string>
    <string name="cincoAVeinte">$5 a $20</string>
    <string name="VeinteUnoCincuenta">$21 a $50</string>
    <string name="cincoUnoOchenta">$51 a $80</string>
    <string name="masOchenta">+ $80</string>
    <string name="aGastar">¿Cuánto dinero estaría dispuesto a gastar en su mascota mensualmente?</string>
    <string name="mascotaEnferma">Si la mascota se enferma usted:</string>
    <string name="veterinario">Veterinario</string>
    <string name="mismo">Lo medica</string>
    <string name="centro">Centro veterinario</string>
    <string name="solo">Esperar que se sane</string>
    <string name="periodica">Está de acuerdo en que se haga una visita periódica</string>
    <string name="si">Si</string>
    <string name="no">No</string>
    <string name="mascotasPrevias">Mascotas previas</string>
    <string name="situacion">¿Donde está ahora? fallecio, perdió, indique la causa</string>
    <string-array name="pets_array">
        <item>Perro</item>
        <item>Gato</item>
        <item>Loro</item>
        <item>Conejo</item>
        <item>Otro</item>
        <item>Ninguna</item>
    </string-array>
    <string name="solicitud">Solicitud de adopción</string>
    <string name="evaluacion">Formulario de evaluación médica</string>
    <string name="medica">Evaluación médica</string>
    <string name="edadEvaluacion">Edad</string>
    <string name="observacionGeneral">Observaciones</string>
    <string name="fracturas">Fracturas</string>
    <string name="fechaIngreso">Fecha de ingreso</string>
    <string name="genero">Genero</string>
    <string name="descripcionGeneral">Descripción general</string>
    <string name="estadoInicial">Estado inicial</string>
    <string name="tipo">Tipo/Edad</string>
    <string name="describa">Describa</string>
    <string name="medicamentos">Medicamentos suministrados</string>
    <string name="poradoptar">En proceso de adopción</string>
    <string name="proceso">Proceso de adopción</string>
    <string name="porAoptado">Adoptados/Por adoptar</string>
    <string name="drontal">Drontal Desparasitante</string>
    <string name="rimadyltal">Rimadyl</string>
    <string name="pipeta">Pipeta Pul-Ga Kill</string>
    <string name="emulgel">Funhit® emulgel</string>
    <string name="meloxic">Meloxic® 0.5%</string>
    <string name="brillo">Brillo® OTIC</string>
    <string name="coccigan">Coccigan® D</string>
    <string name="suero">Suero</string>
    <string name="otrosMedicamentos">Otros medicamentos</string>
    <string name="tiempo">Tiempo en días</string>
    <string name="adoptable">Adoptable </string>
    <string name="adicional">Observaciones adicionales</string>
    <string name="personales">Datos personales</string>
    <string name="relacion">Relación con los animales</string>
    <string name="parentesco">Parentesco</string>
    <string name="referencia">Referencias personales</string>
    <string name="otras">Otras</string>
    <string name="otros">Otro</string>
    <string name="pregunta1">¿Por qué desea adoptar una mascota?</string>
    <string name="pregunta2">¿Responsable de cubrir los gastos de la mascota?</string>
    <string name="pregunta3">Si cambia de domicilio, ¿qué pasaría con su mascota?</string>
    <string name="pregunta4">¿Y si los dueños de la nueva casa no aceptan mascotas?</string>
    <string name="porque">¿Por qué?</string>
    <string name="cerrar">Cerrar sesión</string>
    <string name="legislacion">Legislación vigente</string>
    <string name="codigo">Código Penal y Civil:</string>
    <string name="codigoParrafo">El Código Penal Ecuatoriano, en aquellas partes que se refieren a animales, habla lo siguiente:</string>
    <string name="itemParrafo">1. Muerte de un animal doméstico en el lugar que el dueño del animal es propietario, usufructuario, locatario o inquilino.</string>
    <string name="itemParrafo1">2. Prohibición de tenencia de animales domésticos o domesticados en bienes declarados en propiedad horizontal.</string>
    <string name="itemParrafo2">3. La zoofilia.</string>
    <string name="itemParrafo3">4. Contravenciones penales.</string>
    <string name="ordenanza">Ordenanza 128 del DM de Quito:</string>
    <string name="codigoParrafo1">El objetivo que esta ordenanza metropolitana persigue es el de ”… establecer las condiciones en las que los habitantes y visitantes del Distrito Metropolitano de Quito deben mantener los perros y otros animales domésticos a su cargo, sean o no propietarios de éstos…”</string>
    <string name="codigoParrafo2">Obligaciones:</string>
    <string name="itemParrafo4">1. Cubrir gastos médicos y psicológicos si su animal ataca a otra persona u otro animal.</string>
    <string name="itemParrafo5">2. Mantener al animal en condiciones que no ocasionen molestias a los vecinos.</string>
    <string name="codigoParrafo3">Prohibiciones:</string>
    <string name="itemParrafo6">1. La venta de perros en espacios públicos sin el debido permiso.</string>
    <string name="itemParrafo7">2. Amarrar o encadenar dejando a los animales en situaciones de riesgo.</string>
    <string name="itemParrafo8">3. Organizar y promover peleas de perros.</string>
    <string name="codigoParrafo4">Sanciones:</string>
    <string name="itemParrafo9">Multas que van entre los 50 y 200 dólares.</string>
    <string name="continuar">Continuar</string>
    <string name="salir">Salir</string>
    <string name="dias">días</string>
    <string name="adoptado">Guardar</string>
    <string name="enadopcion">En adopción</string>
    <string name="cumple">¿Aprobado?</string>
    <string name="revision">Validación de información</string>
    <string name="olvidar">¿Olvidaste tu contraseña?</string>
    <string name="instrucciones">Para restablecer la contraseña, ingrese su correo electrónico, presione el botón y revise el correo para seguir las instrucciones.</string>
    <string name="restablecer">Restablecer contraseña</string>
    <string name="atras">Regresar</string>
    <string name="desc" />
    <string name="hint" />
    <string name="superior">Superior</string>
    <string name="mensaje">Un momento, por favor</string>
    <string name="cedula">Cédula</string>
    <string name="ocupacion">Ocupación</string>
    <string name="completa">Dirección completa</string>
    <string name="nombApell">Nombre y apellidos</string>
    <string name="razon">Razón de la visita</string>
    <string name="valorados">Valorados</string>
    <string name="actualizar">Actualizar</string>
    <string name="borrar">Borrar</string>
    <string name="registro">Registros</string>
    <string name="guardar">Guardar</string>
    <string name="avistamiento">Avistamientos</string>
    <string name="equipo">Equipo</string>
    <string name="cancelar">Cancelar</string>
    <string name="_2020_2021">2020&#8211;2021</string>
    <string name="fernando_moya_chiluiza">Fernando Moya Chiluiza</string>
    <string name="ya_tienes_una_cuenta_ingresar">¿Ya tienes una cuenta? Ingresar</string>
    <string name="registro_de_usuarios">Registro de usuarios</string>
    <string name="reg_strate">Regístrate</string>
    <string name="correo_electr_nico">Correo electrónico</string>
    <string name="contrase_a">Contraseña</string>
    <string name="descripci_n">Descripción</string>
    <string name="recuperar_contrase_a">Recuperar contraseña</string>
    <string name="no_registrado_registrate_aqu">¿No registrado? Regístrate aquí</string>
    <string name="iniciar_sesi_n">Iniciar sesión</string>
    <string name="edad_aproximada">Edad</string>
    <string name="email">Email</string>
    <string name="vacunas">Vacunas</string>
    <string name="moquillo">Moquillo</string>
    <string name="hepatitis">Hepatitis</string>
    <string name="parvovirosis">Parvovirosis</string>
    <string name="leptospirosis">Leptospirosis</string>
    <string name="rabia">Rabia</string>
    <string name="tos">Tos</string>
    <string name="lyme">Enf de Lyme</string>
    <string name="babesiosis">Babesiosis</string>
    <string name="leishmaniasis">Leishmaniasis</string>
    <string name="titulo">Tipo</string>
    <string name="cuadrados">m²</string>
    <string name="mas_informacion"><![CDATA[<u>Más información</u>]]></string>
    <string name="icons_description">animation frames container</string>
    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">Siguiente</string>
    <string name="skip">Saltar</string>
    <string name="start">Continuar</string>
    <string name="estado">Estado</string>
    <string name="slide_1_title">Adopción responsable</string>
    <string name="slide_1_desc">Adoptar un animal representa mucho más que conseguir una mascota, significa encontrar un compañero, un amigo agradecido por la nueva oportunidad que le brindas.</string>
    <string name="slide_2_title">Planeación y reflexión</string>
    <string name="slide_2_desc">Recuerda organizar los espacios que tienes en casa para que tu mascota permanezca en las mejores condiciones.</string>
    <string name="slide_3_title">Ten mucha paciencia</string>
    <string name="slide_3_desc">¡Gánate su confianza y bríndale un ambiente lleno de amor!</string>
    <string name="slide_4_title">Calcula tus gastos</string>
    <string name="slide_4_desc">Asegúrale una buena calidad de vida a tu nuevo compañero. Calcula los gastos que vas a tener como alimentación, visitas al veterinario, entre otros.</string>
</resources>
