<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistryActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/desc"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/reset" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#44000000"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="15dp"
            android:autofillHints=""
            android:hint="@string/correo_electr_nico"
            android:inputType="textEmailAddress"
            android:paddingStart="20dp"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:paddingEnd="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp"
            android:textColor="#fff"
            android:textColorHint="#ccc" />

        <EditText

            android:id="@+id/editText2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:autofillHints=""
            android:hint="@string/contrase_a"
            android:inputType="textPassword"
            android:paddingStart="20dp"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:paddingEnd="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp"
            android:textColor="#fff"
            android:textColorHint="#ccc" />

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="30dp"
            android:text="@string/reg_strate"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ya_tienes_una_cuenta_ingresar"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:text="@string/registro_de_usuarios"
            android:textColor="#d3d3d3"
            android:textSize="16sp" />
    </LinearLayout>
</RelativeLayout>