<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/desc"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/login" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#44000000"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="15dp"
            android:autofillHints=""
            android:hint="@string/correo_electr_nico"
            android:inputType="textEmailAddress"
            android:paddingStart="20dp"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:paddingEnd="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp"
            android:textColor="#fff"
            android:textColorHint="#ccc" />

        <EditText
            android:id="@+id/editText2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:autofillHints=""
            android:hint="@string/contrase_a"
            android:inputType="textPassword"
            android:paddingStart="20dp"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:paddingEnd="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp"
            android:textColor="#fff"
            android:textColorHint="#ccc" />

        <TextView
            android:id="@+id/txtMensajes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:text=""
            android:visibility="gone" />

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="30dp"
            android:text="@string/iniciar_sesi_n"
            android:textColor="#fff"
            android:textSize="16sp" />


        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_registrado_registrate_aqu"
            android:textColor="#fff"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/txtResetPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/recuperar_contrase_a"
            android:textColor="#fff"
            android:textSize="16sp" />

    </LinearLayout>
</RelativeLayout>