<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ChoiceActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/imgBtnFrmLocation"
            android:layout_width="match_parent"
            android:layout_height="125dp"
            android:background="@drawable/input"
            android:contentDescription="@string/desc"
            android:onClick="onClick"
            app:srcCompat="@drawable/maps" />

        <TextView
            android:id="@+id/lblLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/title_location"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/imgBtnFrmEvaluation"
            android:layout_width="match_parent"
            android:layout_height="125dp"
            android:background="@drawable/input"
            android:contentDescription="@string/desc"
            android:onClick="onClick"
            app:srcCompat="@drawable/evaluation" />

        <TextView
            android:id="@+id/lblEvaluation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/medica"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp"
            android:textStyle="bold" />


        <ImageButton
            android:id="@+id/imgBtnFrmAdoption"
            android:layout_width="match_parent"
            android:layout_height="125dp"
            android:background="@drawable/input"
            android:contentDescription="@string/desc"
            android:onClick="onClick"
            app:srcCompat="@drawable/contrato" />

        <TextView
            android:id="@+id/lblFrmAdoption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/title_adoption"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/imgBtnListAdoption"
            android:layout_width="match_parent"
            android:layout_height="125dp"
            android:background="@drawable/input"
            android:contentDescription="@string/desc"
            android:onClick="onClick"
            app:srcCompat="@drawable/adoptar" />

        <TextView
            android:id="@+id/lblAdoption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/proceso"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/imgBtnSalir"
            android:layout_width="match_parent"
            android:layout_height="125dp"
            android:background="@drawable/input"
            android:contentDescription="@string/desc"
            android:onClick="onClick"
            app:srcCompat="@drawable/evacuacion" />

        <TextView
            android:id="@+id/lblCerrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/cerrar"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>
</ScrollView>

